# ai-systems-lab

./: README.md
blog/: 01-why-llm-inference-slow.md
code/llm-inference-benchmark/benchmarks/: results.md
code/llm-inference-benchmark/docker/: Dockerfile  README.md  docker-compose.yml  run.sh
code/llm-inference-benchmark/python/: benchmark.py  inference.py  requirements.txt
code/llm-inference-benchmark/rust/: Cargo.toml
code/llm-inference-benchmark/rust/src/: kv_cache.rs  main.rs  model.rs
docs/: 90-day-plan.md  content-ideas.md
docs/notes/: README.md
docs/projects/: README.md
