[package]
name = "llm-inference-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance LLM inference in Rust"

[dependencies]
# Hugging Face's Rust ML framework
candle-core = "0.3"
candle-transformers = "0.3"
candle-nn = "0.3"

# Tokenizer
tokenizers = "0.15"

# Hugging Face hub for model downloading
hf-hub = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Optional: Python bindings
# pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
default = []
# python = ["pyo3"]

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "llm-inference"
path = "src/main.rs"
